--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>artcode</groupId>
     <artifactId>StudyArt</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
     <properties>
         <mockito-all.version>1.10.19</mockito-all.version>
@@ -16,13 +16,12 @@
         <log4j.version>1.2.17</log4j.version>
     </properties>
 
-
     <dependencies>
 
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
-            <version>${mockito-all.version}</version>
+            <version>${mockito-all.version}</version><!-- ${}-->
             <scope>test</scope>
         </dependency>
 
