--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <org.eclipse.persistence.moxy.version>2.6.1</org.eclipse.persistence.moxy.version>
         <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
         <compilator.java.version>1.8</compilator.java.version>
+        <morphia.version>1.0.1</morphia.version>
     </properties>
 
 
@@ -26,6 +27,11 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
             <version>${mockito-all.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mongodb.morphia</groupId>
+            <artifactId>morphia</artifactId>
+            <version>${morphia.version}</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
