--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
             <version>${morphia.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>2.8.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>org.eclipse.persistence.moxy</artifactId>
             <version>${org.eclipse.persistence.moxy.version}</version>
