--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,2 +1,6 @@
 db.json.task.path=src/main/resources/coding_bat_tasks_db.json
 logs.dir.path=logs
+host=localhost
+port=27017
+databaseName=CodingBat
+
