--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
         <compilator.java.version>1.8</compilator.java.version>
         <morphia.version>1.0.1</morphia.version>
+        <mongo-java-driver.version>2.11.0</mongo-java-driver.version>
     </properties>
 
 
@@ -36,7 +37,7 @@
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongo-java-driver</artifactId>
-            <version>2.8.0</version>
+            <version>${mongo-java-driver.version}</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
