--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,12 @@
             <version>${log4j.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>2.2.5-b10</version>
+        </dependency>
+
     </dependencies>
 
 
