add jacoco plugin in the pom

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
         <org.eclipse.persistence.moxy.version>2.6.1</org.eclipse.persistence.moxy.version>
         <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
         <compilator.java.version>1.8</compilator.java.version>
+        <maven-surefire-plugin.version>2.19</maven-surefire-plugin.version>
+        <jacoco-maven-plugin.version>0.7.5.201505241946</jacoco-maven-plugin.version>
     </properties>
 
 
@@ -66,6 +68,32 @@
                     <target>${compilator.java.version}</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin.version}</version>
+            </plugin>
+
+            <plugin>
+                <!--read about advanced settings for the project if you want jacoco will be more useful -->
+                <!--http://www.petrikainulainen.net/programming/maven/creating-code-coverage-reports-for-unit-and-integration-tests-with-the-jacoco-maven-plugin/ -->
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${jacoco-maven-plugin.version}</version>
+
+                <executions>
+                    <execution>
+                        <id>default-prepare-agent</id>
+                        <goals><goal>prepare-agent</goal></goals>
+                    </execution>
+                    <execution>
+                        <id>default-report</id>
+                        <phase>prepare-package</phase>
+                        <goals><goal>report</goal></goals>
+                    </execution>
+                </executions>
+            </plugin>
+
         </plugins>
     </build>
 
