--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
         <compilator.java.version>1.8</compilator.java.version>
         <morphia.version>1.0.1</morphia.version>
         <mongo-java-driver.version>2.11.0</mongo-java-driver.version>
+        <jacoco-maven-plugin.version>0.7.5.201505241946</jacoco-maven-plugin.version>
+        <gson.version>2.4</gson.version>
     </properties>
 
 
@@ -30,9 +32,19 @@
             <version>${mockito-all.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.mongodb.morphia</groupId>
             <artifactId>morphia</artifactId>
             <version>${morphia.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>${jacoco-maven-plugin.version}</version>
         </dependency>
         <dependency>
             <groupId>org.mongodb</groupId>
