--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
         <compilator.java.version>1.8</compilator.java.version>
         <morphia.version>1.0.1</morphia.version>
+        <jcomander.version>1.48</jcomander.version>
     </properties>
 
 
@@ -69,6 +70,13 @@
             <artifactId>jaxb-impl</artifactId>
             <version>2.2.5-b10</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.beust</groupId>
+            <artifactId>jcommander</artifactId>
+            <version>${jcomander.version}</version>
+        </dependency>
+
 
     </dependencies>
 
