--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -4,6 +4,7 @@ mongo.host=localhost
 mongo.port=27017
 mongo.db=CodingBat
 mongo.test.db=FakeDB
+mongo.data.db.path=/Users/johnsmith/Mongodb/data/db
 mongo.userName=admin
 mongo.password=artcode
 
