--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <spring.version>4.2.2.RELEASE</spring.version>
         <httpclient.version>4.5.1</httpclient.version>
         <commons-lang3.version>3.4</commons-lang3.version>
+        <commons-codec.version>1.10</commons-codec.version>
     </properties>
 
 
@@ -86,6 +87,13 @@
             <artifactId>httpclient</artifactId>
             <version>${httpclient.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>${commons-codec.version}</version>
+        </dependency>
+
 
         <!--SPRING -->
         <dependency>
