resolve conflict with Maxim

--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -5,6 +5,7 @@ mongo.port=27017
 mongo.db=CodingBat
 mongo.test.db=FakeDB
 mongo.data.db.path=/Users/johnsmith/Mongodb/data/db
+mongo.test.data.db.path
 mongo.userName=admin
 mongo.password=artcode
 
