--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -5,7 +5,8 @@ mongo.port=27017
 mongo.db=CodingBat
 mongo.test.db=FakeDB
 mongo.data.db.path=/Users/johnsmith/Mongodb/data/db
-mongo.test.data.db.path
+#Velocity resources
+velocity.template=general_template.vm
 mongo.userName=admin
 mongo.password=artcode
 
