--- a/pom.xml
+++ b/pom.xml
@@ -29,11 +29,17 @@
         <commons-lang3.version>3.4</commons-lang3.version>
         <commons-codec.version>1.10</commons-codec.version>
         <velocity.version>1.7</velocity.version>
+        <commons-io.version>1.3.2</commons-io.version>
     </properties>
 
 
     <dependencies>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons-io.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
