--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <commons-codec.version>1.10</commons-codec.version>
         <velocity.version>1.7</velocity.version>
         <commons-io.version>1.3.2</commons-io.version>
+        <jstl.version>1.2</jstl.version>
     </properties>
 
 
@@ -41,6 +42,12 @@
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>3.1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>${jstl.version}</version>
         </dependency>
 
         <dependency>
