--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -6,8 +6,8 @@ mongo.db=CodingBat
 mongo.test.db=FakeDB
 mongo.data.db.path=/Users/johnsmith/Mongodb/data/db
 #Velocity resources
-velocity.template=/src/main/resources/general_template.vm
-mongo.userName=admin
-mongo.password=artcode
+velocity.template=src/main/resources/general_template.vm
+root.dynamic=/temp
+
 
 
