--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <velocity.version>1.7</velocity.version>
         <commons-io.version>1.3.2</commons-io.version>
         <jstl.version>1.2</jstl.version>
+        <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
     </properties>
 
 
@@ -40,7 +41,7 @@
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
+            <version>${javax.servlet-api.version}</version>
         </dependency>
 
         <dependency>
