add spring properties

--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,10 +1,14 @@
-db.json.task.path=src/main/resources/coding_bat_tasks_db.json
+db.json.task.path=/coding_bat_tasks_db.json
 logs.dir.path=logs
+codingbat.url=http://codingbat.com
+
+#Mongo resources
 mongo.host=localhost
 mongo.port=27017
 mongo.db=CodingBat
 mongo.test.db=FakeDB
 mongo.data.db.path=/Users/johnsmith/Mongodb/data/db
+
 #Velocity resources
 velocity.template=/general_template.vm
 root.dynamic=temp/
