--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
         <compilator.java.version>1.8</compilator.java.version>
         <maven-surefire-plugin.version>2.19</maven-surefire-plugin.version>
         <jacoco-maven-plugin.version>0.7.5.201505241946</jacoco-maven-plugin.version>
-        <morphia.version>1.0.1</morphia.version>
+        <morphia.version>1.1.1</morphia.version>
         <mongo-java-driver.version>2.11.0</mongo-java-driver.version>
         <jacoco-maven-plugin.version>0.7.5.201505241946</jacoco-maven-plugin.version>
         <gson.version>2.4</gson.version>
@@ -203,6 +203,7 @@
 
 
     <build>
+        <finalName>StudyArt</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
