--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
         <spring-security-web.version>4.0.3.RELEASE</spring-security-web.version>
         <spring-security-config.version>4.0.3.RELEASE</spring-security-config.version>
         <spring-security-taglibs.version>4.0.3.RELEASE</spring-security-taglibs.version>
+        <hibernate-validator.version>5.2.3.Final</hibernate-validator.version>
     </properties>
 
 
@@ -198,6 +199,19 @@
             <artifactId>spring-webmvc</artifactId>
             <version>${spring.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>${hibernate-validator.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-expression</artifactId>
+            <version>4.2.4.RELEASE</version>
+        </dependency>
+
 
     </dependencies>
 
