--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,10 @@
         <spring-security-web.version>4.0.3.RELEASE</spring-security-web.version>
         <spring-security-config.version>4.0.3.RELEASE</spring-security-config.version>
         <spring-security-taglibs.version>4.0.3.RELEASE</spring-security-taglibs.version>
-        <hibernate-validator.version>5.2.3.Final</hibernate-validator.version>
+
+        <spring-binding.version>2.3.2.RELEASE</spring-binding.version>
+        <hibernate-validator.version>5.2.4.Final</hibernate-validator.version>
+        <spring-expression.version>4.2.4.RELEASE</spring-expression.version>
     </properties>
 
 
@@ -146,7 +149,7 @@
         <dependency>
             <groupId>org.springframework.webflow</groupId>
             <artifactId>spring-binding</artifactId>
-            <version>2.3.2.RELEASE</version>
+            <version>${spring-binding.version}</version>
         </dependency>
 
         <dependency>
@@ -197,6 +200,12 @@
             <version>${spring-security-taglibs.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>${hibernate-validator.version}</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework</groupId>
@@ -205,15 +214,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-validator</artifactId>
-            <version>${hibernate-validator.version}</version>
-        </dependency>
-
-        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-expression</artifactId>
-            <version>4.2.4.RELEASE</version>
+            <version>${spring-expression.version}</version>
         </dependency>
 
 
