Refurbisher taskGraber after changes in site codingbat.com

--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,13 +1,12 @@
-db.json.task.path=/Users/Home/IdeaProjects/StudyArt/src/main/resources/coding_bat_tasks_db.json
+db.json.task.path=src/main/resources/coding_bat_tasks_db.json
 logs.dir.path=logs
-codingbat.url=http://codingbat.com
 
 #Mongo resources
 mongo.host=localhost
 mongo.port=27017
 mongo.db=StudyArt
 mongo.test.db=FakeDB
-mongo.data.db.path=/Users/johnsmith/Mongodb/data/db
+mongo.data.db.path=/mongodb/data/db
 
 #Velocity resources
 velocity.template=/general_template.vm
