add unit test to Dao

--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -6,8 +6,7 @@ mongo.host=localhost
 mongo.port=27017
 mongo.db=StudyArt
 mongo.test.db=FakeDB
-mongo.data.db.path=/mongodb/data/db
-
+mongo.data.db.path=/Users/johnsmith/Mongodb/data/db
 #Velocity resources
 velocity.template=/general_template.vm
 root.dynamic=temp/
