--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
         <spring-binding.version>2.3.2.RELEASE</spring-binding.version>
         <hibernate-validator.version>5.2.4.Final</hibernate-validator.version>
         <spring-expression.version>4.2.4.RELEASE</spring-expression.version>
+        <jackson.version>1.9.10</jackson.version>
     </properties>
 
 
@@ -211,6 +212,12 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
             <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
 
         <dependency>
